--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(135deg, #1a4d2e 0%, #2d5016 50%, #1a4d2e 100%);
+            background-attachment: fixed;
             min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
             padding: 20px;
             position: relative;
-            overflow: hidden;
+            overflow-y: auto;
         }
 
         body::before {
@@ -42,6 +40,7 @@
             padding: 40px;
             max-width: 600px;
             width: 100%;
+            margin: 0 auto;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.4);
             border: 4px solid #4caf50;
             position: relative;
